--- a/index.html
+++ b/index.html
@@ -13,28 +13,41 @@
 </head>
 
 <body>
+    <h1>Learn to code by watching others</h1>
 
-  Learn to code by watching others
+    <p class="description">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+    but understanding how developers think is invaluable.</p>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+    <div class="price-box">
+        <p class="price-box__text">Try it free 7 days then $20/mo. thereafter</p>
+    </div>
 
-  Try it free 7 days then $20/mo. thereafter
+    <form action="" method="post">
+        <ul class="form__container">
+            <li class="form__input-box">
+                <input type="text" id="first-name" name="first-name" placeholder="First Name" aria-label="first-name" required />
+            </li>
+            <li class="form__input-box">
+                <input type="text" id="last-name" name="last-name" placeholder="Last Name" aria-label="last-name" required />
+            </li>
+            <li class="form__input-box">
+                <input type="email" id="email" name="email" placeholder="Email Address" aria-label="email" required />
+            </li>
+            <li class="form__input-box">
+                <input type="password" id="password" name="password" placeholder="Password" aria-label="password" required />
+            </li>
+        </ul>
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+    <button type="submit" class="form__submit-btn">claim your free trial</button>
 
-  Claim your free trial 
+    <p class="form__terms">By clicking the button, you are agreeing to our <a href="#" class="form__terms--bold">Terms and Services</a></p>
+    </form>
 
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+    <footer>
+        <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Megan</a>.
+        </p>
+    </footer>
 </body>
 </html>
