--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <script src="scripts/script.js" defer></script>
 
   <title>Frontend Mentor | Intro component with sign up form</title>
 
