--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     but understanding how developers think is invaluable.</p>
 
     <div class="price-box">
-        <p class="price-box__text">Try it free 7 days then $20/mo. thereafter</p>
+        <p class="price-box__text"><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
     </div>
 
-    <form action="" method="post">
+    <form action="" method="">
         <ul class="form__container">
             <li class="form__input-box">
                 <input type="text" id="first-name" name="first-name" placeholder="First Name" aria-label="first-name" required />
@@ -40,7 +40,7 @@
 
     <button type="submit" class="form__submit-btn">claim your free trial</button>
 
-    <p class="form__terms">By clicking the button, you are agreeing to our <a href="#" class="form__terms--bold">Terms and Services</a></p>
+    <p class="form__terms">By clicking the button, you are agreeing to our <a href="#" class="form__terms--link">Terms and Services</a></p>
     </form>
 
     <footer>
