--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <form action="" method="">
         <ul class="form__container">
             <li class="form__input-box">
-                <input type="text" id="first-name" name="first-name" placeholder="First Name" aria-label="first-name" required />
+                <input type="text" id="first-name" class="form__input" name="first-name" placeholder="First Name" aria-label="first-name" required />
             </li>
             <li class="form__input-box">
-                <input type="text" id="last-name" name="last-name" placeholder="Last Name" aria-label="last-name" required />
+                <input type="text" id="last-name" class="form__input" name="last-name" placeholder="Last Name" aria-label="last-name" required />
             </li>
             <li class="form__input-box">
-                <input type="email" id="email" name="email" placeholder="Email Address" aria-label="email" required />
+                <input type="email" id="email" class="form__input" name="email" placeholder="Email Address" aria-label="email" required />
             </li>
             <li class="form__input-box">
-                <input type="password" id="password" name="password" placeholder="Password" aria-label="password" required />
+                <input type="password" id="password" class="form__input" name="password" placeholder="Password" aria-label="password" required />
             </li>
         </ul>
 
