--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <main>
     <div class="pitch">
     <h1>Learn to code by watching others</h1>
 
@@ -61,6 +62,6 @@
         </p>
     </footer>
     </div>
-
+    </main>
 </body>
 </html>
